--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             <h1>hb-layout-grid</h1>
         </header>
         <div class="box-container">
-            <section class="boxes-containers">
+            <section class="boxes-containers two-boxes">
                 <article id = "box1" class = "left-box two-boxes-box colors"></article>
                 <article class = "box2 two-boxes-box colors"></article>
             </section>
-            <section class = "boxes-containers">
+            <section class = "boxes-containers three-boxes">
                 <article class = "box3 left-box three-boxes-box colors"></article>
                 <article class = "box4 left-box three-boxes-box colors"></article>
                 <article class = "box5 three-boxes-box colors"></article>
